# Luxsi

./: .hgignore  CMakeLists.txt  LuXSI.cpp  LuXSI.ini  PLY.cpp  luxsi.vcproj  luxsi_SLGRender.cpp  luxsi_camera.cpp  luxsi_define.cpp  luxsi_dynamicUI.cpp  luxsi_geometry.cpp  luxsi_gui.cpp  luxsi_hair.cpp  luxsi_instances.cpp  luxsi_integrated.cpp  luxsi_light.cpp  luxsi_main.h  luxsi_material.cpp  luxsi_pointclouds.cpp  luxsi_surface.cpp  luxsi_texture.cpp  luxsi_utils.cpp  luxsi_values.h  xsi.vcproj
include/: LuXSI.h  luxsi_SLGRender.h  luxsi_camera.h  luxsi_dynamicUI.h  luxsi_geometry.h  luxsi_instances.h  luxsi_lights.h  luxsi_main.h  luxsi_material.h  luxsi_values.h
shaders/: CMakeLists.txt  lux_car_paint.cpp  lux_emitter_mat.cpp  lux_glass.cpp  lux_glossy.cpp  lux_matte.cpp  lux_mattetranslucent.cpp  lux_metal.cpp  lux_mirror.cpp  lux_point_light.cpp  lux_roughglass.cpp  lux_scatter.cpp  lux_shinymetal.cpp  lux_substrate.cpp  lux_velvet.cpp
shaders/include/: lux_car_paint.h  lux_emitter_mat.h  lux_glass.h  lux_glossy.h  lux_matte.h  lux_mattetranslucent.h  lux_metal.h  lux_mirror.h  lux_point_light.h  lux_roughglass.h  lux_scatter.h  lux_shinymetal.h  lux_substrate.h  lux_velvet.h
shaders/spdl/: lux_camera_dof.spdl  lux_car_paint.spdl  lux_emitter_mat.spdl  lux_environment_light.spdl  lux_glass.spdl  lux_glossy.spdl  lux_matte.spdl  lux_mattetranslucent.spdl  lux_metal.spdl  lux_mirror.spdl  lux_plastic.spdl  lux_point_light.spdl  lux_roughglass.spdl  lux_scatter.spdl  lux_shinymetal.spdl  lux_substrate.spdl  lux_velvet.spdl
